--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -11,6 +11,7 @@
     <modules>
       <module>design_manager</module>
       <module>design_builder</module>
+      <module>rest_api</module>
     </modules>
 
 
