--- a/Java/rest_api/src/main/webapp/WEB-INF/web.xml
+++ b/Java/rest_api/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-    <display-name>Archetype Created Web Application</display-name>
-<!--    <servlet>
-        <servlet-name>NewServlet</servlet-name>
-        <servlet-class>com.stitchgalaxy.rest_api.NewServlet</servlet-class>
-    </servlet>-->
+    <display-name>Stitch galaxy rest api</display-name>
     <servlet>
         <servlet-name>ServletAdaptor</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
@@ -14,12 +10,8 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-<!--    <servlet-mapping>
-        <servlet-name>NewServlet</servlet-name>
-        <url-pattern>/test</url-pattern>
-    </servlet-mapping>-->
     <servlet-mapping>
         <servlet-name>ServletAdaptor</servlet-name>
-        <url-pattern>/webresources/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
