--- a/Java/sg_manager_web/pom.xml
+++ b/Java/sg_manager_web/pom.xml
@@ -21,6 +21,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+	<groupId>joda-time</groupId>
+	<artifactId>joda-time</artifactId>
+	<version>[2.1,)</version>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
