--- a/Java/sg_manager_web/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg_manager_web/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app id="WebApp_ID" version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <display-name>Stitch galaxy web manager</display-name>
-    <servlet>
-        <servlet-name>Home</servlet-name>
-        <servlet-class>com.stitchgalaxy.sg_manager_web.HomeManagerServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>NewProduct</servlet-name>
-        <servlet-class>com.stitchgalaxy.sg_manager_web.NewProductServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>EditProduct</servlet-name>
-        <servlet-class>com.stitchgalaxy.sg_manager_web.EditProductServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Home</servlet-name>
-        <url-pattern/>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>NewProduct</servlet-name>
-        <url-pattern>/new_product</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>EditProduct</servlet-name>
-        <url-pattern>/edit_product</url-pattern>
-    </servlet-mapping>
 </web-app>
