--- a/Java/sg_manager_web/pom.xml
+++ b/Java/sg_manager_web/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>sg_manager_web</finalName>
