--- a/Java/lib/pom.xml
+++ b/Java/lib/pom.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>stitchgalaxy</artifactId>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>stitchgalaxy</artifactId>
+        <groupId>com.stitchgalaxy</groupId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
     <groupId>com.stitchgalaxy</groupId>
+    <artifactId>sg-common</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-  </parent>
-  <groupId>com.stitchgalaxy</groupId>
-  <artifactId>lib</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>lib</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <name>Common libraries</name>
+    <url>http://maven.apache.org</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-version}</version>
+        </dependency>
+    </dependencies>
 </project>
