--- a/Java/sg-rest-api/pom.xml
+++ b/Java/sg-rest-api/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>rest_api</artifactId>
   <packaging>war</packaging>
   <version>1.0.0-SNAPSHOT</version>
-  <name>rest_api Maven Webapp</name>
+  <name>Rest API</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
