--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -30,6 +30,7 @@
         <jpa-version>1.0.2</jpa-version>
         <dozer-version>5.4.0</dozer-version>
         <spring-version>4.0.0.RELEASE</spring-version>
+        <commons-dbcp-version>1.4</commons-dbcp-version>
     </properties>
     
 </project>
