--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -27,12 +27,13 @@
         <commons-lang3.version>3.0</commons-lang3.version>
         <jstl.version>1.2</jstl.version>
         <taglibs.version>1.1.2</taglibs.version>
-        <jpa-version>1.0.2</jpa-version>
         <dozer-version>5.4.0</dozer-version>
         <spring-version>4.0.0.RELEASE</spring-version>
         <commons-dbcp-version>1.4</commons-dbcp-version>
         <spring-hibernate3-version>2.0.8</spring-hibernate3-version>
         <hsqldb-version>1.8.0.10</hsqldb-version>
+        <jta-version>1.1</jta-version>
+        <hibernate-version>4.3.1.Final</hibernate-version>
     </properties>
     
 </project>
