--- a/Java/sg-manager-web/pom.xml
+++ b/Java/sg-manager-web/pom.xml
@@ -17,35 +17,33 @@
         <dependency>
             <groupId>com.stitchgalaxy</groupId>
             <artifactId>sg-common</artifactId>
-            <version>${sg-common.version}</version>
         </dependency>
         <dependency>
             <groupId>com.stitchgalaxy</groupId>
             <artifactId>sg-dao</artifactId>
-            <version>${sg-dao.version}</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
-            <version>${javaee-web-api.version}</version>
+            <version>${javaee-web-api-version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>${jsp-api.version}</version>
+            <version>${jsp-api-version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
-            <version>${taglibs.version}</version>
+            <version>${taglibs-version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <version>${jstl.version}</version>
+            <version>${jstl-version}</version>
         </dependency>
         
         <dependency>
@@ -57,7 +55,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3.version}</version>
+            <version>${commons-lang3-version}</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
