--- a/Java/sg-manager-web/pom.xml
+++ b/Java/sg-manager-web/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>sg-dao</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>${javaee-web-api-version}</version>
