--- a/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,8 @@
     <servlet-mapping>
         <servlet-name>mvc-dispatcher</servlet-name>
         <url-pattern>/category/view/topLevel</url-pattern>
+        <url-pattern>/category/add/topLevel</url-pattern>
+        <url-pattern>/category/remove/topLevel</url-pattern>
     </servlet-mapping>
     
     <context-param>
