--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -29,6 +29,7 @@
         <taglibs-version>1.1.2</taglibs-version>
         <dozer-version>5.4.0</dozer-version>
         <spring-version>4.0.0.RELEASE</spring-version>
+        <spring-security-version>3.2.0.RELEASE</spring-security-version>
         <commons-dbcp-version>1.4</commons-dbcp-version>
         <spring-hibernate3-version>2.0.8</spring-hibernate3-version>
         <hsqldb-version>1.8.0.10</hsqldb-version>
