--- a/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,9 @@
         <url-pattern>/category/view</url-pattern>
         <url-pattern>/category/add</url-pattern>
         <url-pattern>/category/remove</url-pattern>
+        <url-pattern>/login</url-pattern>
+        <url-pattern>/logout</url-pattern>
+        <url-pattern>/accessDenied</url-pattern>
     </servlet-mapping>
     <!-- Spring security -->
     <filter>
