--- a/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,9 @@
         <url-pattern>/loginfailed</url-pattern>
         <url-pattern>/logout</url-pattern>
         <url-pattern>/accessDenied</url-pattern>
+        <url-pattern>/home</url-pattern>
+        <url-pattern>/</url-pattern>
+        <url-pattern></url-pattern>
     </servlet-mapping>
     
 
