--- a/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,7 @@
         <url-pattern>/category/remove</url-pattern>
         <url-pattern>/login</url-pattern>
         <url-pattern>/loginfailed</url-pattern>
-        <url-pattern>/logout</url-pattern>
+<!--        <url-pattern>/logout</url-pattern>-->
         <url-pattern>/accessDenied</url-pattern>
         <url-pattern>/home</url-pattern>
         <url-pattern>/</url-pattern>
