--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -22,6 +22,8 @@
 	<sg-cdn-version>1.0.0-SNAPSHOT</sg-cdn-version>
         <sg-manager-web-version>1.0.0-SNAPSHOT</sg-manager-web-version>
         <joda-version>2.3</joda-version>
+        <joda-time-hibernate-version>1.3</joda-time-hibernate-version>
+        <jadira-version>3.0.0.CR1</jadira-version>
         <junit-version>4.10</junit-version>
         <javaee-web-api-version>6.0</javaee-web-api-version>
         <jsp-api-version>2.1</jsp-api-version>
