--- a/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -43,8 +43,12 @@
         <url-pattern>/category/add</url-pattern>
         <url-pattern>/category/remove</url-pattern>
         <url-pattern>/login</url-pattern>
-        <url-pattern>/loginfailed</url-pattern>
-<!--        <url-pattern>/logout</url-pattern>-->
+        <url-pattern>/loginfailed</url-pattern>        
+        <url-pattern>/product/view</url-pattern>
+        <url-pattern>/product/add</url-pattern>
+        <url-pattern>/product/edit</url-pattern>
+        <url-pattern>/product/remove</url-pattern>
+        <!--        <url-pattern>/logout</url-pattern>-->
         <url-pattern>/accessDenied</url-pattern>
         <url-pattern>/home</url-pattern>
         <url-pattern>/</url-pattern>
