--- a/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,10 @@
         <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
+        <multipart-config>
+            <max-file-size>52428800</max-file-size>
+            <file-size-threshold>5242880</file-size-threshold>
+        </multipart-config>
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>
