--- a/Web/bower.json
+++ b/Web/bower.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "0.0.0",
   "dependencies": {
+    "underscore": "1.5.0",
     "angular": "1.2.15",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
