--- a/Web/bower.json
+++ b/Web/bower.json
@@ -11,7 +11,8 @@
     "angular-resource": "1.2.15",
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15"
+    "angular-route": "1.2.15",
+    "angular-base64": "2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
