--- a/sg/sg-rest-api/src/main/resources/log4j.properties
+++ b/sg/sg-rest-api/src/main/resources/log4j.properties
@@ -1,11 +1,6 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=DEBUG, ADR
+log4j.rootLogger=ALL, console
 
-# ADR is set to be a ConsoleAppender.
-log4j.appender.ADR=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ADR.File=stitchgalaxy.log
-log4j.appender.ADR.DatePattern='.'yyyy-MM-dd
-
-# ADR uses PatternLayout.
-log4j.appender.ADR.layout=org.apache.log4j.PatternLayout
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.AC.layout.ConversionPattern=[%-5p] %d %c [%t] %x - %m%n
