--- a/sg/sg-rest-api/src/main/resources/com/stitchgalaxy/configuration/properties/dev/domain.jpa.properties
+++ b/sg/sg-rest-api/src/main/resources/com/stitchgalaxy/configuration/properties/dev/domain.jpa.properties
@@ -1,15 +1,10 @@
-#jdbc.url=jdbc:hsqldb:file:stitchgalaxydb
-#jdbc.driverClassName=org.hsqldb.jdbcDriver
-#jdbc.username=sa
-#jdbc.password=
-#hibernate.dialect=org.hibernate.dialect.HSQLDialect
-
 jdbc.url=jdbc:mysql://localhost:3306/sg
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.username=root
 jdbc.password=root
+
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 hibernate.show_sql = true
 hibernate.format_sql = true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create
