--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.stitchgalaxy</groupId>
-  <artifactId>stitchgalaxy</artifactId>
+  <groupId>com.sg</groupId>
+  <artifactId>sg</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   
@@ -30,16 +30,15 @@
                 <mysql-connector-java-version>5.1.31</mysql-connector-java-version>
                 <log4j-version>1.2.17</log4j-version>
                 <usertype.core-version>3.2.0.GA</usertype.core-version>
-
                 <spring-security-version>3.2.1.RELEASE</spring-security-version>
-
-
+                <jackson-mapper-asl-version>1.9.13</jackson-mapper-asl-version>
+                <dozer-version>5.5.1</dozer-version>
   </properties>
 
 	<dependencyManagement>
 		<dependencies>
                         <dependency>
-				<groupId>com.stitchgalaxy</groupId>
+				<groupId>com.sg</groupId>
 				<artifactId>sg-data</artifactId>
 				<version>${sg-data-version}</version>
 			</dependency>
@@ -59,7 +58,7 @@
       </pluginManagement>
   </build>
   <modules>
-    <module>stitchgalaxy-ear</module>
+    <module>sg-ear</module>
     <module>sg-data</module>
     <module>sg-rest-api</module>
   </modules>
