--- a/sg/sg-ear/pom.xml
+++ b/sg/sg-ear/pom.xml
@@ -6,6 +6,7 @@
   <artifactId>sg-ear</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>ear</packaging>
+  <name>ear</name>
 
   <parent>
     <groupId>com.sg</groupId>
