--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -36,6 +36,7 @@
                 <hamcrest-all-version>1.3</hamcrest-all-version>
                 <mockito-core-version>1.9.5</mockito-core-version>
                 <json-path-version>0.9.1</json-path-version>
+                <commons-io-version>1.3.2</commons-io-version>
   </properties>
 
 	<dependencyManagement>
