--- a/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,17 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
+    <!-- Log request filter -->
+    <filter>
+        <filter-name>logRequestFilter</filter-name>
+        <filter-class>com.sg.sg_rest_api.filters.LoggerFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>logRequestFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    
     <servlet>
         <servlet-name>mvcServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
