--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -16,7 +16,7 @@
                 <spring-data-jpa-version>1.6.1.RELEASE</spring-data-jpa-version>
                 <spring-boot-starter-data-jpa-version>1.1.4.RELEASE</spring-boot-starter-data-jpa-version>
 
-		<junit-version>4.10</junit-version>
+		<junit-version>4.11</junit-version>
 		<joda-version>2.3</joda-version>
 		<joda-time-hibernate-version>1.3</joda-time-hibernate-version>
 		<hibernate-version>4.3.6.Final</hibernate-version>
@@ -38,6 +38,7 @@
                 <hibernate-validator-version>5.1.2.Final</hibernate-validator-version>
                 <javax.el-api-version>3.0.0</javax.el-api-version>
                 <javax.mail-api-version>1.5.2</javax.mail-api-version>
+                <rest-assured-version>2.3.2</rest-assured-version>
   </properties>
 
 	<dependencyManagement>
